[gd_scene load_steps=5 format=3 uid="uid://bqxvyxqhqvhxj"]

[ext_resource type="Script" uid="uid://cqnkc5o75nf4y" path="res://scripts/GameManager.gd" id="1_0k8xj"]
[ext_resource type="Script" path="res://scripts/UI/SimpleHUD.gd" id="2_3h4kl"]
[ext_resource type="PackedScene" uid="uid://bvx80a00a1b2c" path="res://scenes/Galaxy3DScene.tscn" id="4_galaxy3d"]
[ext_resource type="Script" uid="uid://b31g3nfq2kr3w" path="res://scripts/ViewportController.gd" id="5_viewport"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Galaxy3DScene" parent="." instance=ExtResource("4_galaxy3d")]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_0k8xj")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.047, 0.047, 0.18, 1)

[node name="SimpleHUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_3h4kl")



[node name="GameArea" type="Control" parent="MainUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 90.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Galaxy3DViewport" type="SubViewport" parent="MainUI/GameArea"]
size = Vector2i(1200, 800)
render_target_update_mode = 0
script = ExtResource("5_viewport")

[node name="EventNotification" type="AcceptDialog" parent="MainUI"]
title = "Galactic Event!"
initial_position = 1
size = Vector2i(450, 350)

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/EventNotification"]
offset_left = 8.0
offset_top = 8.0
offset_right = 442.0
offset_bottom = 301.0

[node name="EventName" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Event Name"
horizontal_alignment = 1

[node name="EventDescription" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Event description goes here..."
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2

[node name="EffectsTitle" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Event Effects:"

[node name="EffectsText" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Effects go here..."
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2

[node name="DurationTitle" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Duration:"

[node name="DurationText" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Duration info goes here..."

[node name="HSeparator3" type="HSeparator" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2

[node name="SystemsTitle" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Affected Systems:"

[node name="SystemsText" type="Label" parent="MainUI/EventNotification/VBoxContainer"]
layout_mode = 2
text = "Systems go here..."
autowrap_mode = 2

[node name="ArtifactNotification" type="AcceptDialog" parent="MainUI"]
title = "Artifact Discovered!"
initial_position = 1
size = Vector2i(400, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/ArtifactNotification"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 251.0

[node name="ArtifactName" type="Label" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2
text = "Artifact Name"
horizontal_alignment = 1

[node name="ArtifactDescription" type="Label" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2
text = "Artifact description goes here..."
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2

[node name="LoreTitle" type="Label" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2
text = "Precursor Lore Fragment:"

[node name="LoreText" type="Label" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2
text = "Lore fragment goes here..."
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2

[node name="EffectsTitle" type="Label" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2
text = "Artifact Effects:"

[node name="EffectsText" type="Label" parent="MainUI/ArtifactNotification/VBoxContainer"]
layout_mode = 2
text = "Effects go here..."
autowrap_mode = 2
